API:수정 - 직원 근무상태(work_status)에 따른 직원목록 불러오는 코드 작성